--- a/splashScreen.html
+++ b/splashScreen.html
@@ -12,9 +12,15 @@
 
 <div class='intro'>
     <h1 class='logo-header'>
-
         <span class='logo'>Empowering & Connecting Youth,<br>Serving Wildlife</span>
     </h1>
+    <h4>
+        <span class='logo'>Team: </span>
+        <span class='logo'>Nilasi Jayathilake</span>
+        <span class='logo'>Pasan Laksitha</span>
+        <span class='log'>Dasun Perera</span>
+        <span class='logo'>Mahima Sandaken</span>
+    </h4>
 
 
 </div>
