--- a/shop.html
+++ b/shop.html
@@ -5,7 +5,14 @@
     <title>Shop</title>
 
     <link rel="stylesheet" href="css/shop.css" />
-
+    <style>
+      /*body{*/
+      /*  background: url("assets/leaves.png");*/
+      /*  background-repeat: no-repeat;*/
+      /*  background-size: cover;*/
+      /*  background-position: center center;*/
+      /*}*/
+    </style>
 
   </head>
   <body class="">
@@ -14,7 +21,7 @@
       <header>
         <h1>Shop Our Merch <3</h1>
         <div class="shopping">
-          <img src="assets/shoppingBag.jpg" alt="shopping" />
+          <img src="assets/shopping-cart.png" alt="shopping" />
           <span class="quantity">0</span>
 
         </div>
@@ -29,11 +36,11 @@
 
       <div class="checkout">
         <div class="total">Net Total: 0</div>
-        <button class="proceedCheckout" id="checkout"  >
-          CheckOut
+        <button class="proceedCheckout" id="checkout">
+         <h2> CheckOut</h2>
         </button>
       </div>
-      <div class="closeShopping">Close</div>
+      <div class="closeShopping">Close Cart</div>
     </div>
 
     <script src="script/shop.js"></script>
