setup Student1 indiviual page
editorial.html page

--- a/volunteer.html
+++ b/volunteer.html
@@ -320,9 +320,9 @@
             </p>
         </div>
         <div class="footer-right">
-            <a href="#" class="social facebook">Facebook</a>
-            <a href="#" class="social twitter">Facebook</a>
-            <a href="#" class="social google">Facebook</a>
+            <a href="#" class="logo facebook">Facebook</a>
+            <a href="#" class="logo twitter">Facebook</a>
+            <a href="#" class="logo google">Facebook</a>
         </div>
         <div class="clear"></div>
     </div>
