--- a/team.html
+++ b/team.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register as a Volunteer</title>
+    <title>Our Team</title>
 
     <!--    <link rel="stylesheet" href="css/parallax.css" >-->
     <link rel="stylesheet" href="css/student_3.css">
@@ -22,6 +22,9 @@
             margin: 0;
             padding: 0;
         }
+        .t_name{
+            text-align: center;
+        }
     </style>
 
 </head>
@@ -29,7 +32,7 @@
 
 <header>
 
-    <img src="assets/icon/Untitled-1-Recovered-Recovered.png" id="nav-logo" alt="">
+    <a href="index.html"><img src="assets/icon/Untitled-1-Recovered-Recovered.png" id="nav-logo" alt=""></a>
     <nav>
         <a href="index.html" class="active">Home</a>
         <a href="index.html#about">About</a>
@@ -42,43 +45,43 @@
 <section id="home" class="home">
     <img src="assets/parallax/sky.png" class="mount2">
     <img src="assets/parallax/back.png" class="mount1">
-    <h1 class="title">GAIA</h1>
+    <h1 class="title">OUR TEAM</h1>
     <img src="assets/parallax/front.png" class="bush1">
 
 </section>
 <br><br>
 <section class="team-cards" id="team">
-    <div class="team-member">
-        <div class="thumbnail">
-            <img class="team-member-image" src="../images/20180125_001_1_.jpg" alt="John Doe">
+    <div class="team-member" id="t_1">
+        <div class="thumbnail" >
+            <img class="team-member-image" src="assets/team/nilasi.png" alt="Nilasi Jayathilaka">
             <div class="details">
-                <p><strong>John Doe</strong></p>
-                <p>Role: Front-end Developer</p>
-                <p>Tasks: UI design, HTML/CSS</p>
+                <p class="t_name"><strong>Nilasi Jayathilaka</strong></p>
+                <p>Role: Student 1 </p>
+                <p>Tasks: Splash Screen / Shop</p>
+            </div>
+        </div>
+        <div class="thumbnail">
+            <img class="team-member-image" src="assets/team/pasan.png" alt="Pasan Lakshitha">
+            <div class="details">
+                <p class="t_name"><strong>Pasan Kulathunga</strong></p>
+                <p>Role: Student 2</p>
+                <p>Tasks: Home Page, Feedback Form</p>
+            </div>
+        </div>
+        <div class="thumbnail">
+            <img class="team-member-image" src="assets/team/dasun.jpg" alt="Dasun Perea">
+            <div class="details">
+                <p class="t_name"><strong>Dasun Perera</strong></p>
+                <p>Role: Student 3</p>
+                <p>Tasks: User Profile / Volunteer Registration, Team</p>
             </div>
         </div>
         <div class="thumbnail">
             <img class="team-member-image" src="../images/20180125_001_1_.jpg" alt="John Doe">
             <div class="details">
-                <p><strong>John Doe</strong></p>
-                <p>Role: Front-end Developer</p>
-                <p>Tasks: UI design, HTML/CSS</p>
-            </div>
-        </div>
-        <div class="thumbnail">
-            <img class="team-member-image" src="../images/20180125_001_1_.jpg" alt="John Doe">
-            <div class="details">
-                <p><strong>John Doe</strong></p>
-                <p>Role: Front-end Developer</p>
-                <p>Tasks: UI design, HTML/CSS</p>
-            </div>
-        </div>
-        <div class="thumbnail">
-            <img class="team-member-image" src="../images/20180125_001_1_.jpg" alt="John Doe">
-            <div class="details">
-                <p><strong>John Doe</strong></p>
-                <p>Role: Front-end Developer</p>
-                <p>Tasks: UI design, HTML/CSS</p>
+                <p class="t_name"><strong>Mahima Dharmasena</strong></p>
+                <p>Role: Student 4</p>
+                <p>Tasks: Gallery,Sitemap</p>
             </div>
         </div>
     </div>
@@ -90,7 +93,7 @@
             <img src="assets/icon/ftguyfiu.jpg">
             <img src="assets/icon/projectlogo.jpg">
 
-            <p class="footer-nav"><a href="index.html">HOME </a> | <a href="shop.html">SHOP</a> | <a href="volunteer.html">VOLUNTEER REGISTER</a> | <a href="#">GALLERY</a> | <a href="team.html">OUR TEAM</a></p>
+            <p class="footer-nav"><a href="index.html">HOME </a> | <a href="shop.html">SHOP</a> | <a href="volunteer.html">VOLUNTEER REGISTER</a> | <a href="#">GALLERY</a> | <a href="team.html">OUR TEAM</a>|<a href="feedback.html">FEEDBACK</a> </p>
 
             <p class="footer-links"><a href="#">Contact Us</a> I <a href="#">Terms &amp; Conditions</a> I<a href="#">Privacy</a>
             </p>
