--- a/blog1.html
+++ b/blog1.html
@@ -11,7 +11,7 @@
 <body>
 <header>
 
-    <img src="assets/icon/Untitled-1-Recovered-Recovered.png" id="nav-logo" alt="">
+    <a href="index.html"><img src="assets/icon/Untitled-1-Recovered-Recovered.png" id="nav-logo" alt=""></a>
     <nav>
         <a href="index.html" class="active">Home</a>
         <a href="index.html#about">About</a>
