--- a/feedback.html
+++ b/feedback.html
@@ -13,7 +13,7 @@
 <body class="bo">
     <header>
 
-        <img src="assets/icon/Untitled-1-Recovered-Recovered.png" id="nav-logo" alt="">
+        <a href="index.html"><img src="assets/icon/Untitled-1-Recovered-Recovered.png" id="nav-logo" alt=""></a>
         <nav>
             <a href="index.html" class="active">Home</a>
             <a href="index.html#about">About</a>
