--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
     <script src="js/splash.js"></script>
 
-
 </head>
 <body>
 
@@ -22,7 +21,7 @@
 
 <header>
 
-    <img src="assets/icon/Untitled-1-Recovered-Recovered.png" id="nav-logo" alt="">
+    <a href="index.html"><img src="assets/icon/Untitled-1-Recovered-Recovered.png" id="nav-logo" alt=""></a>
     <nav>
         <a href="#home" class="active">Home</a>
         <a href="#about">About</a>
@@ -205,7 +204,7 @@
             <img src="assets/icon/ftguyfiu.jpg">
             <img src="assets/icon/projectlogo.jpg">
 
-            <p class="footer-nav"><a href="index.html">HOME </a> | <a href="shop.html">SHOP</a> | <a href="volunteer.html">VOLUNTEER REGISTER</a> | <a href="#">GALLERY</a> | <a href="team.html">OUR TEAM</a></p>
+            <p class="footer-nav"><a href="index.html">HOME </a> | <a href="shop.html">SHOP</a> | <a href="volunteer.html">VOLUNTEER REGISTER</a> | <a href="#">GALLERY</a> | <a href="team.html">OUR TEAM</a>|<a href="feedback.html">FEEDBACK</a> </p>
 
             <p class="footer-links"><a href="#">Contact Us</a> I <a href="#">Terms &amp; Conditions</a> I<a href="#">Privacy</a>
             </p>
