--- a/shop.html
+++ b/shop.html
@@ -59,7 +59,7 @@
 <body>
 <header>
 
-    <img src="assets/icon/Untitled-1-Recovered-Recovered.png" id="nav-logo" alt="">
+    <a href="index.html"><img src="assets/icon/Untitled-1-Recovered-Recovered.png" id="nav-logo" alt=""></a>
     <nav>
         <a href="#home" class="active">Home</a>
         <a href="#about">About</a>
