--- a/splashScreen.html
+++ b/splashScreen.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="css/splash.css">
     <script src="js/splash.js"></script>
     <meta http-equiv="refresh" content="2.5;url=splashGIF.html" />
+    <script>
+        setTimeout(function() {
+            window.location.href = "index.html";
+        }, 3000); // Redirect back to index.html after 2.5 seconds (adjust the delay as needed)
+    </script>
 </head>
 <body>
 
