--- a/index.html
+++ b/index.html
@@ -208,10 +208,17 @@
 
 <!--FOOTER HERE-->
 
-<footer>
-    <div class="wrapper">
+<footer id="footer">
+    <div class="wrapper_footer">
+
         <div class="footer-left">
-            <p class="copyright">Gaia Team</p>
+            <img src="assets/icon/ftguyfiu.jpg">
+            <img src="assets/icon/projectlogo.jpg">
+
+            <p class="footer-nav"><a href="index.html">HOME </a> | <a href="shop.html">SHOP</a> | <a
+                    href="volunteer.html">VOLUNTEER REGISTER</a> | <a href="#">GALLERY</a> | <a href="team.html">OUR
+                TEAM</a>|<a href="feedback.html">FEEDBACK</a></p>
+
             <p class="footer-links"><a href="#">Contact Us</a> I <a href="#">Terms &amp; Conditions</a> I<a href="#">Privacy</a>
             </p>
         </div>
