--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
 
 
 
+
+
+
 <header>
 
-    <h1>GAIA</h1>
+    <a href="index.html"><img src="assets/icon/Untitled-1-Recovered-Recovered.png" id="nav-logo" alt=""></a>
     <nav>
         <a href="#home" class="active">Home</a>
         <a href="#about">About</a>
         <a href="#project">Projects</a>
         <a href="#blog">Blog</a>
-        <a href="gallery.html">Gallery</a>
     </nav>
 </header>
 
@@ -208,16 +210,24 @@
 
 <!--FOOTER HERE-->
 
-<footer>
-    <div class="wrapper">
+<footer id="footer">
+    <div class="wrapper_footer">
+
         <div class="footer-left">
-            <p class="copyright">Gaia Team</p>
+            <img src="assets/icon/ftguyfiu.jpg">
+            <img src="assets/icon/projectlogo.jpg">
+
+            <p class="footer-nav"><a href="index.html">HOME </a> | <a href="shop.html">SHOP</a> | <a
+                    href="volunteer.html">VOLUNTEER REGISTER</a> | <a href="#">GALLERY</a> | <a href="team.html">OUR
+                TEAM</a>|<a href="feedback.html">FEEDBACK</a></p>
+
             <p class="footer-links"><a href="#">Contact Us</a> I <a href="#">Terms &amp; Conditions</a> I<a href="#">Privacy</a>
             </p>
         </div>
         <div class="clear"></div>
     </div>
 </footer>
+
 
 <script src="js/parallax.js"></script>
 
