--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <header>
 
-    <a href="index.html"><img src="assets/icon/Untitled-1-Recovered-Recovered.png" id="nav-logo" alt=""></a>
+    <a href="index.html"><img src="assets/logo/Untitled-1-Recovered-Recovered.png" id="nav-logo" alt=""></a>
     <nav>
         <a href="#home" class="active">Home</a>
         <a href="#about">About</a>
@@ -214,8 +214,8 @@
     <div class="wrapper_footer">
 
         <div class="footer-left">
-            <img src="assets/icon/ftguyfiu.jpg">
-            <img src="assets/icon/projectlogo.jpg">
+            <img src="assets/logo/logo.png">
+            <img src="assets/logo/projectlogo.jpg">
 
             <p class="footer-nav"><a href="index.html">HOME </a> | <a href="shop.html">SHOP</a> | <a
                     href="volunteer.html">VOLUNTEER REGISTER</a> | <a href="#">GALLERY</a> | <a href="team.html">OUR
