--- a/blog1.html
+++ b/blog1.html
@@ -96,7 +96,9 @@
     <div class="buttons">
         <a href="" class="button-1">Read More</a>
     </div>
+    <a href="pageeditor_student3.html"><button>Student <br> (Page Editor)</button></a>
 </section>
+
 <footer>
     <div class="wrapper_footer">
 
