--- a/blog1.html
+++ b/blog1.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/tmp.css">
     <link rel="stylesheet" href="css/blur-card.css">
     <link rel="stylesheet" href="css/parallax.css">
+    <link rel="stylesheet" href="css/blog.css">
     <link rel="stylesheet" href="css/blog.css">
     <title>Blog/Origin-Stories</title>
 </head>
