--- a/blog2.html
+++ b/blog2.html
@@ -78,7 +78,7 @@
                 <p>Whether you want to volunteer in our vet clinic or for beach cleanups. We at Gaia welcome
                     all volunteers. We have volunteers working with us throughout the Year, and they are the foundation
                     of our project.<br> It's nit just volunteering, we have fun too!</p>
-                <a href="#">Read Her Experience</a> <!-- TODO: Link Dasun's application Page(p)-->
+                <a href="#">Read Her Experience</a>
             </li>
             <li>
                 <div class="image-container">
