--- a/blog3.html
+++ b/blog3.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/tmp.css">
     <link rel="stylesheet" href="css/blur-card.css">
     <link rel="stylesheet" href="css/parallax.css">
     <link rel="stylesheet" href="css/blog.css">
+    <link rel="stylesheet" href="css/style.css">
+
     <title>Blog/Volunteer Stories</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
 
     <h1>GAIA</h1>
     <nav>
-        <a href="#home" class="active">Home</a>
+        <a href="index.html" class="active">Home</a>
         <a href="#about">About</a>
         <a href="#project">Projects</a>
         <a href="#blog">Blog</a>
@@ -23,7 +24,7 @@
 
 <!--HOME HERE-->
 <section id="home" class="home">
-    <img src="assets/YalaDeer.jpg" alt="blogpic">
+    <img src="assets/gallery/YalaDeer.jpg" alt="blogpic">
     <h1 class="title">VOLUNTEER STORIES</h1>
 </section>
 
@@ -86,7 +87,7 @@
                     <h6>UN SUSTAINABILITY GOAL 15</h6>
                     <p>The UN's "Life on Land" goal tackles protecting Earth's precious ecosystems – forests, mountains, and more. It aims
                         to stop deforestation, restore degraded land, and halt biodiversity loss, ensuring a healthy planet for all creatures.</p>
-                    <a href="#">Learn More</a>
+                    <a href="index.html">Learn More</a>
                 </div>
 
             </li>
@@ -99,7 +100,7 @@
                 <p>Whether you want to volunteer in our vet clinic or for beach cleanups. We at Gaia welcome
                     all volunteers. We have volunteers working with us throughout the Year, and they are the foundation
                     of our project.<br> It's nit just volunteering, we have fun too!</p>
-                <a href="#">Read Her Experience</a> <!-- TODO: Link Dasun's application Page(p)-->
+                <a href="blog2.html">Read Her Experience</a>
             </li>
             <li>
                 <div class="image-container">
@@ -111,7 +112,7 @@
                     you
                     buy from here, goes into the volunteers fund.</p>
 
-                <a href="shop.html">Read More</a> <!-- TODO: Link Nilasi's Shopping Page(p)-->
+                <a href="shop.html">Read More</a>
             </li>
             <div class="clear"></div>
         </ul>
