--- a/feedback.html
+++ b/feedback.html
@@ -22,98 +22,95 @@
 <div class="spacer"></div>
 
 <div class="body_feedback">
-    <!--<section id="bg-image" >-->
+
 
     <h2>Feedback Form</h2>
-    <!-- Form -->
 
 
-    <form class="feedback" action="" method="POST">
 
-        <!-- Name -->
-        <label class="label_feedback" for="name">*Enter your name:</label><br>
-        <input class="input-field_feedback" type="text" id="name" name="name" required><br>
+    <form id="feedbackform" class="feedback" action="" method="POST">
 
-        <!-- Email -->
-        <label class="label_feedback" for="email">*Enter your email:</label><br>
-        <input class="input-field_feedback" type="email" id="email" name="email" required><br>
 
-        <!-- first time visiting -->
-        <p class="center_feedback">Was this your first time visiting?</p>
+        <label class="label" for="name">*Enter your name:</label><br>
+        <input class="input-field" type="text" id="name" name="name" required><br>
+
+
+        <label class="label" for="email">*Enter your email:</label><br>
+        <input class="input-field" type="email" id="email" name="email" required><br>
+
+        <p class="center">Was this your first time visiting?</p>
         <center>
             <input type="radio" id="yes" name="visit" value="yes">
-            <label class="label_feedback" for="yes">Yes</label>
+            <label class="label" for="yes">Yes</label>
             <input type="radio" id="no" name="visit" value="no">
-            <label class="label_feedback" for="yes">No</label><br>
+            <label class="label" for="yes">No</label><br>
         </center>
 
-        <!-- Suggestion -->
-        <p class="center_feedback">If "No", Suggest any improvements for the future : </p>
-        <textarea class="input-field_feedback" id="suggestion" name="suggestion" rows="3" cols="50"></textarea><br><br>
 
-        <!-- Satisfaction -->
-        <p class="center_feedback">How satisfied are you with our service? Choose from 0 to 10, with 1 being "Not
+        <p class="center">If "No", Suggest any improvements for the future : </p>
+        <textarea class="input-field" id="suggestion" name="suggestion" rows="3" cols="50"></textarea><br><br>
+
+
+        <p class="center">How satisfied are you with our service? Choose from 0 to 10, with 1 being "Not
             satisfied
             at all" and 10 being "Extremely satisfied!"</p>
-        <!-- Radio buttons for satisfaction -->
-        <!-- Labels have unique for attributes corresponding to the radio button IDs -->
-        <input class="radio-feedback" type="radio" name="satisfaction" value="1" id="satisfaction_1">
+
+        <input class="radio" type="radio" name="satisfaction" value="1" id="satisfaction_1">
         <label class="label-feedback" for="satisfaction_1">1</label>
 
-        <input class="radio-feedback" type="radio" name="satisfaction" value="2" id="satisfaction_2">
+        <input class="radio" type="radio" name="satisfaction" value="2" id="satisfaction_2">
         <label class="label-feedback" for="satisfaction_2">2</label>
 
-        <input class="radio-feedback" type="radio" name="satisfaction" value="3" id="satisfaction_3">
+        <input class="radio" type="radio" name="satisfaction" value="3" id="satisfaction_3">
         <label class="label-feedback" for="satisfaction_3">3</label>
 
-        <input class="radio-feedback" type="radio" name="satisfaction" value="4" id="satisfaction_4">
+        <input class="radio" type="radio" name="satisfaction" value="4" id="satisfaction_4">
         <label class="label-feedback" for="satisfaction_4">4</label>
 
-        <input class="radio-feedback" type="radio" name="satisfaction" value="5" id="satisfaction_5">
+        <input class="radio" type="radio" name="satisfaction" value="5" id="satisfaction_5">
         <label class="label-feedback" for="satisfaction_5">5</label>
 
-        <input class="radio-feedback" type="radio" name="satisfaction" value="6" id="satisfaction_6">
+        <input class="radio" type="radio" name="satisfaction" value="6" id="satisfaction_6">
         <label class="label-feedback" for="satisfaction_6">6</label>
 
-        <input class="radio-feedback" type="radio" name="satisfaction" value="7" id="satisfaction_7">
+        <input class="radio" type="radio" name="satisfaction" value="7" id="satisfaction_7">
         <label class="label-feedback" for="satisfaction_7">7</label>
 
-        <input class="radio-feedback" type="radio" name="satisfaction" value="8" id="satisfaction_8">
+        <input class="radio" type="radio" name="satisfaction" value="8" id="satisfaction_8">
         <label class="label-feedback" for="satisfaction_8">8</label>
 
-        <input class="radio-feedback" type="radio" name="satisfaction" value="9" id="satisfaction_9">
+        <input class="radio" type="radio" name="satisfaction" value="9" id="satisfaction_9">
         <label class="label-feedback" for="satisfaction_9">9</label>
 
-        <input class="radio-feedback" type="radio" name="satisfaction" value="10" id="satisfaction_10">
+        <input class="radio" type="radio" name="satisfaction" value="10" id="satisfaction_10">
         <label class="label-feedback" for="satisfaction_10">10</label>
 
-        <!-- recommendation -->
-        <p class="center_feedback">Would you recommend our services?</p>
+
+        <p class="center">Would you recommend our services?</p>
         <center>
             <input type="radio" name="recommendation" value="yes">
-            <label class="label_feedback" for="yes">Yes</label>
+            <label class="label" for="yes">Yes</label>
             <input type="radio" name="recommendation" value="no">
-            <label class="label_feedback" for="yes">No</label><br>
+            <label class="label" for="yes">No</label><br>
         </center>
 
-        <!-- updates -->
-        <p class="center_feedback">Would you like to receive updates about the website and any offers?</p>
+
+        <p class="center">Would you like to receive updates about the website and any offers?</p>
         <select class="select-feedback" name="updates" id="updates">
-            <option value="yes">Yes</option>
+            <option value="yes">Yes - Via Emails</option>
             <option value="no">No</option>
         </select><br>
 
-        <!-- questions or requests -->
-        <p class="center_feedback">Do you have additional questions or requests?</p>
-        <textarea class="input-field_feedback" id="qor" name="qor" rows="4" cols="50"></textarea><br><br>
+        <p class="center">Do you have additional questions or requests?</p>
+        <textarea class="input-field" id="qor" name="qor" rows="4" cols="50"></textarea><br><br>
 
-        <!-- Submit Button -->
-        <input class="submit-button_feedback" type="submit" value="Submit">
+        <input class="submit" type="submit" value="Submit">
+        <input value="Reset" type="reset" class="cancel">
     </form>
 
 
 </div>
 </body>
 
-
+<script src="js/feedback.js"></script>
 </html>
