--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project GAIA</title>
 
-<!--    <link rel="stylesheet" href="css/parallax.css" >-->
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/widgets/navigation.css">
     <link rel="stylesheet" href="css/blur-card.css">
     <link rel="stylesheet" href="css/splash.css">
 
@@ -28,17 +26,17 @@
     </nav>
 </header>
 
-<!--HOME HERE-->
+
 <section id="home" class="home">
-    <img src="assets/parallax/sky.png" class="mount2">
-    <img src="assets/parallax/back.png" class="mount1">
-    <img src="assets/parallax/bush2.png" class="bush2">
+    <img src="assets/parallax/sky.png" class="mount2" alt="sky">
+    <img src="assets/parallax/back.png" class="mount1" alt="back">
+    <img src="assets/parallax/bush2.png" class="bush2" alt="bush">
 
     <h1 class="title">GAIA</h1>
 
-    <img src="assets/parallax/front.png" class="bush1">
-    <img class="leaf2" src="assets/parallax/bush1.png">
-    <img src="assets/parallax/bush.png" class="leaf1">
+    <img src="assets/parallax/front.png" class="bush1" alt="front">
+    <img class="leaf2" src="assets/parallax/bush1.png" alt="bush1">
+    <img src="assets/parallax/bush.png" class="leaf1" alt="bush">
 </section>
 
 
@@ -81,7 +79,7 @@
 
 
 <section id="about" class="text-section">
-    <div class="wrapper"><a name="aboutus"></a>
+    <div class="wrapper">
         <div class="image align-left">
             <img src="assets/Gaia%20Logo.jpg" alt="logo" class="align-left">
         </div>
@@ -189,12 +187,14 @@
 <!--SUBSCRIBE FOR NEWSLETTER-->
 
 
-<section class="form-section"><a name="subscribe"></a>
+<section class="form-section">
     <h3>Subscribe for Newsletter</h3>
     <p class="subtitle">Stay up to date with us</p>
     <!--    FIXME : change placeholder color -->
     <form action="" method="post">
-        <input type="email" placeholder="Email Address" required>
+        <label>
+            <input type="email" placeholder="Email Address" required>
+        </label>
         <button type="submit" title="Submit">Submit</button>
     </form>
 </section>
@@ -205,8 +205,8 @@
     <div class="wrapper_footer">
 
         <div class="footer-left">
-            <img src="assets/logo/logo.png">
-            <img src="assets/logo/projectlogo.jpg">
+            <img src="assets/logo/logo.png" alt="logo">
+            <img src="assets/logo/projectlogo.jpg" alt="projectlogo">
 
             <p class="footer-nav"><a href="index.html">HOME </a> | <a href="shop.html">SHOP</a> | <a
                     href="volunteer.html">VOLUNTEER REGISTER</a> | <a href="#">GALLERY</a> | <a href="team.html">OUR
