--- a/team.html
+++ b/team.html
@@ -3,82 +3,101 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GAIA Team</title>
-
-    <!--    <link rel="stylesheet" href="css/parallax.css" >-->
-    <link rel="stylesheet" href="css/student_3.css">
+    <title>Projet GAIA - About Us</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/widgets/navigation.css">
-    <link rel="stylesheet" href="css/blur-card.css">
-    <link rel="stylesheet" href="css/splash.css">
-
-    <script src="js/splash.js"></script>
-
-
+    <link rel="stylesheet" href="css/form.css">
+    <style>
+        body{
+            background-color: #1c3b2b;
+        }
+        h1{
+            font-family: 'Montserrat', sans-serif;
+            text-transform: uppercase;
+            font-weight: 700;
+            color: #1d4408;
+            margin: 0;
+            padding: 0;
+        }
+        .t_name{
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-
-
-
-<header>
-
-    <h1>GAIA</h1>
-    <nav>
-        <a href="#home" class="active">Home</a>
-        <a href="#about">About</a>
-        <a href="#project">Projects</a>
-        <a href="#blog">Blog</a>
-    </nav>
-</header>
-
-<!--HOME HERE-->
-<section id="home" class="home">
-    <img src="assets/parallax/sky.png" class="mount2">
-    <img src="assets/parallax/back.png" class="mount1">
-    <img src="assets/parallax/bush2.png" class="bush2">
-
-    <h1 class="title">GAIA</h1>
-
-    <img src="assets/parallax/front.png" class="bush1">
-    <img class="leaf2" src="assets/parallax/bush1.png">
-    <img src="assets/parallax/bush.png" class="leaf1">
-</section>
-<br><br>
-<section class="team-cards">
-    <div class="team-member">
-        <div class="thumbnail">
-            <img class="team-member-image" src="../images/20180125_001_1_.jpg" alt="John Doe">
-            <div class="details">
-                <p><strong>John Doe</strong></p>
-                <p>Role: Front-end Developer</p>
-                <p>Tasks: UI design, HTML/CSS</p>
+    <!-- Header -->
+    <header>
+        <a href="#"><img src="assets/icons/nav-logo.png" id="nav-logo" alt="Logo"></a>
+        <!-- Navigation links -->
+        <nav>
+            <a href="home.html#home">Home</a>
+            <a href="home.html#about">About</a>
+            <a href="home.html#project">Projects</a>
+            <a href="home.html#blog">Blog</a>
+            <a href="form.html">Volunteer</a>
+            <a href="shop.html">Shop</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="donations.html">Donate</a>
+        </nav>
+    </header>
+    <!-- Main Content -->
+    <main>
+        <!--HOME HERE-->
+        <section id="home" class="home">
+            <img src="assets/parallax/sky.png" class="mount2">
+            <img src="assets/parallax/back.png" class="mount1">
+            <h1 class="title">OUR TEAM</h1>
+            <img src="assets/parallax/front.png" class="bush1">
+        
+        </section>
+        <br><br>
+        <section class="team-cards" id="team">
+            <div class="team-member" id="t_1">
+                <div class="thumbnail" >
+                    <img class="team-member-image" src="assets/team/nilasi.png" alt="Nilasi Jayathilaka">
+                    <div class="details">
+                        <p class="t_name"><strong>Nilasi Jayathilaka</strong></p>
+                        <p>Role: Student 1 </p>
+                        <p>Tasks: Splash Screen, Shop</p>
+                    </div>
+                </div>
+                <div class="thumbnail">
+                    <img class="team-member-image" src="assets/team/pasan.png" alt="Pasan Lakshitha">
+                    <div class="details">
+                        <p class="t_name"><strong>Pasan Kulathunga</strong></p>
+                        <p>Role: Student 2</p>
+                        <p>Tasks: Home Page, Feedback Form</p>
+                    </div>
+                </div>
+                <div class="thumbnail">
+                    <img class="team-member-image" src="assets/team/dasun.jpg" alt="Dasun Perea">
+                    <div class="details">
+                        <p class="t_name"><strong>Dasun Perera</strong></p>
+                        <p>Role: Student 3</p>
+                        <p>Tasks: User Profile / Volunteer Registration, Team</p>
+                    </div>
+                </div>
+                <div class="thumbnail">
+                    <img class="team-member-image" src="assets/team/mahima.jpg" alt="Mahima Dharamsena">
+                    <div class="details">
+                        <p class="t_name"><strong>Mahima Dharmasena</strong></p>
+                        <p>Role: Student 4</p>
+                        <p>Tasks: Gallery, Sitemap</p>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="thumbnail">
-            <img class="team-member-image" src="../images/20180125_001_1_.jpg" alt="John Doe">
-            <div class="details">
-                <p><strong>John Doe</strong></p>
-                <p>Role: Front-end Developer</p>
-                <p>Tasks: UI design, HTML/CSS</p>
+        </section>
+    </main>
+    <!-- Footer -->
+    <footer>
+        <div class="wrapper">
+            <a class="logo" href="#"><img src="assets/icons/hotel-logo.png" alt=""></a>
+            <div class="footer-left">
+                <p class="copyright">GAIA Team</p>
+                <p class="footer-links"><a href="team.html">About Us</a> &vert; <a href="feedback.html">Feedback</a> &vert; <a href="sitemap.html">Sitemap</a></p>
             </div>
+            <div class="clear"></div>
         </div>
-        <div class="thumbnail">
-            <img class="team-member-image" src="../images/20180125_001_1_.jpg" alt="John Doe">
-            <div class="details">
-                <p><strong>John Doe</strong></p>
-                <p>Role: Front-end Developer</p>
-                <p>Tasks: UI design, HTML/CSS</p>
-            </div>
-        </div>
-        <div class="thumbnail">
-            <img class="team-member-image" src="../images/20180125_001_1_.jpg" alt="John Doe">
-            <div class="details">
-                <p><strong>John Doe</strong></p>
-                <p>Role: Front-end Developer</p>
-                <p>Tasks: UI design, HTML/CSS</p>
-            </div>
-        </div>
-    </div>
-</section>
-<script src="js/parallax.js"></script>
+    </footer>
+    <script src="js/parallax.js"></script>
 </body>
+</html>
